--- a/DataVisualizationPage/index.html
+++ b/DataVisualizationPage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>California School District Data Visualization</title>
+    <title>California School District Data Visualization Tool</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
